# checar_video

./: MyLLM.py  README.md  app.py  app2.py  hello.py  pyproject.toml  requirements.txt  utils.py
medias/: audio.txt
